--- a/WebContent/assets/css/ie9.css
+++ b/WebContent/assets/css/ie9.css
@@ -1,7 +1,7 @@
 /*
-	Minimaxing by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Riddhi Agrodairy Farms Pvt Ltd
+	Technology: HTML5 & CSS3
+	@Author: Sujit Kumar Singh
 */
 
 /* Reusable */
