--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Ubuntu+Condensed");
 
 /*
-	Minimaxing by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Riddhi Agrodairy Farms Pvt Ltd
+	Technology: HTML5 & CSS3
+	@Author: Sujit Kumar Singh
 */
 
 /* Reset */
@@ -1084,13 +1084,13 @@
 		color: #007897;
 		font-weight: normal;
 	}
-
+/* SUJIT
 	h1 {
 		text-transform: lowercase;
 	}
-
+*/
 	h2 {
-		text-transform: lowercase;
+		/*SUJIT text-transform: lowercase; */
 		font-size: 1.6em;
 		letter-spacing: -1px;
 		margin-bottom: 1em;
@@ -1195,7 +1195,7 @@
 		padding: 15px 25px 15px 25px;
 		background-color: #007b9d;
 		border-radius: 10px;
-		text-transform: lowercase;
+		/*SUJIT text-transform: lowercase; */
 		text-decoration: none;
 		color: #fff;
 		font-size: 1.2em;
@@ -1306,7 +1306,7 @@
 					right: 40px;
 					top: 1px;
 					line-height: 84px;
-					text-transform: lowercase;
+					/*SUJIT text-transform: lowercase;*/
 					font-size: 1.3em;
 					letter-spacing: -1px;
 				}
@@ -1382,7 +1382,7 @@
 					color: #fff;
 					text-align: center;
 					letter-spacing: -1px;
-					text-transform: lowercase;
+					/*SUJIT text-transform: lowercase; */
 					opacity: 0.8;
 				}
 
@@ -1608,7 +1608,7 @@
 					color: #fff;
 					text-align: center;
 					letter-spacing: -1px;
-					text-transform: lowercase;
+					/*SUJIT text-transform: lowercase; */
 					opacity: 0.8;
 				}
 
