--- a/WebContent/assets/sass/main.scss
+++ b/WebContent/assets/sass/main.scss
@@ -4,10 +4,11 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed');
 
 /*
-	Minimaxing by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Riddhi Agrodairy Farms Pvt Ltd
+	Technology: HTML5 & CSS3
+	@Author: Sujit Kumar Singh
 */
+
 
 	@import "libs/skel";
 
